# P04_Mykolyangelo

./: .gitignore  INSTRUCTION.md  Makefile  README.md  devlog.txt  makefile  requirements.txt  setup.cfg
app/: __init__.py  schema.graphql
app/country/: views.py
app/country/static/: globe.js
app/country/templates/: base.html  country.html  index.html  map.html  world.html
app/graphql/: database.py  models.py  schema.py  views.py
app/graphql/schemas/: __init__.py  access_to_electricity.py  co2_emission.py  co2_emission_per_capita.py  country.py  electric_consumption.py  greenhouse_gas_emission.py  json_data.py  methane_emission.py  population.py  population_growth.py
app/static/: country.js  globe.js  prelim.csv
app/static/assets/: country.js  d3.min.js  globe.js  search.js  world.js
app/static/assets/min/: d3.min.js  topojson.min.js
app/static/data/: data.csv
app/templates/: index.html
bundler/: package-lock.json  package.json  rollup.config.js
bundler/src/: d3.main.js  main.js  topojson.main.js
