[metadata]
name = app
version = 0.1.0
url = https://github.com/grace-mao23/P04_Mykolyangelo
description = Data visualization with D3 and Flask
long_description = file: README.md

[options]
packages = find:
include_package_data = true
python_requires = >= 3.8.2
install_requires =
    graphene
    Flask
    Flask-SQLAlchemy